2025-01-15 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 12 and 13 only

2024-12-19 Franz Holzinger <franz@ttproducts.de>
    * remove unused class Request/Parameters
    * add class SessionHandler/SessionHandler to store session data.

2024-03-28 Franz Holzinger <franz@ttproducts.de>
    * remove the old API

2023-11-18 Franz Holzinger <franz@ttproducts.de>
    * new feature: Enhance API method Start::render. Parameter $variantFields

2023-10-30 Franz Holzinger <franz@ttproducts.de>
    * new method getGatewayProxyObjectForExtension

2023-10-25 Franz Holzinger <franz@ttproducts.de>
    * remove unused method Start::getListenerExtKey

2023-10-21 Franz Holzinger <franz@ttproducts.de>
    * replace field2array by json_decode

2023-10-10 Franz Holzinger <franz@ttproducts.de>
    * new feature: store the reference uid in a FE user session.

2023-08-19 Franz Holzinger <franz@ttproducts.de>
    * use constants JambageCom\Transactor\Constants\Field for field names :
        'item_name'         => Field::NAME,
        'quantity'          => Field::QUANTITY,
        'amount'            => Field::PRICE_NOTAX,
        'amountnotax'       => Field::PRICE_NOTAX,
        'amounttax'         => Field::PRICE_TAX,
        'goodstax'          => Field::GOODS_TAX,
        'goodsnotax'        => Field::GOODS_NOTAX,
        'goodsvouchertax'   => Field::GOODSVOUCHER_TAX,
        'goodsvouchernotax' => Field::GOODSVOUCHER_NOTAX,
        'payment'           => Field::PAYMENT_TAX,
        'paymenttax'        => Field::PAYMENT_TAX,
        'paymentnotax'      => Field::PAYMENT_NOTAX,
        'shipping'          => Field::SHIPPING_TAX,
        'shippingtax'       => Field::SHIPPING_TAX,
        'shippingnotax'     => Field::SHIPPING_NOTAX,
        'handling'          => Field::HANDLING_TAX,
        'handlingtax'       => Field::HANDLING_TAX,
        'handlingnotax'     => Field::HANDLING_NOTAX,
        'taxpercent'        => Field::TAX_PERCENTAGE,