@@ -26,7 +26,7 @@
   "require": {
     "php": "^8.0",
     "typo3/cms-core": "^12.4 || ^13.4",
-    "jambagecom/div2007": "^2.2"
+    "jambagecom/div2007": "^2.3"
   },
   "suggest": {
     "friendsoftypo3/typo3db-legacy": "^1"
