@@ -18,7 +18,7 @@ $EM_CONF[$_EXTKEY] = [
         'depends' => [
             'php' => '8.0.0-8.4.99',
             'typo3' => '12.4.0-13.4.99',
-            'div2007' => '2.2.0-2.2.99',
+            'div2007' => '2.3.0-2.3.99',
         ],
         'conflicts' => [
         ],
